rhossm-grpc-example/ossm/istio-system-pre/gw-default-ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: default-ingress
  namespace: istio-system-pre
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP2
    hosts:
    - '*.${EXTERNAL_DOMAIN}'
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - '*.secure.${EXTERNAL_DOMAIN}'
    tls:
      credentialName: greeter-server-certs
      mode: MUTUAL # or Mutual, keep in mind the certificate client and server for mTLS
