rhossm-grpc-example/ossm/istio-system-pre/route-greeter-server.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: greeter-server
  namespace: istio-system-pre
spec:
  host: greeter-server.${EXTERNAL_DOMAIN}
  port:
    targetPort: https
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
  tls:
    termination: passthrough
